pervoe slovo bukvy raznogo cveta

--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
 .st{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.s1{
+    color: aqua;
+}
+
+.s2{
+    color: blue;
+}
+
+.s3{
+    color: rgb(0, 119, 255);
+}
+
+.s4{
+    color: rgb(80, 26, 73);
+}
+
+.s5{
+    color: rgb(73, 12, 36);
+}
