vtoroe slovo bukvy raznogo cveta

--- a/style.css
+++ b/style.css
@@ -21,3 +21,24 @@
 .s5{
     color: rgb(73, 12, 36);
 }
+
+
+.s6{
+    color: rgb(194, 96, 240);
+}
+
+.s7{
+    color: rgb(219, 188, 10);
+}
+
+.s8{
+    color: rgb(53, 184, 21);
+}
+
+.s9{
+    color: rgb(73, 28, 10);
+}
+
+.s10{
+    color: rgb(155, 11, 11);
+}
